--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "devDependencies": {
-    "jest": "^24.9.0"
-  },
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "setupFiles": ["jest-localstorage-mock"]
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "jest-localstorage-mock": "^2.4.0"
   }
 }
